--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,4 +3,9 @@
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  background-image: url("./assets/background/blurry-gradient-haikei.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
